[gd_scene load_steps=10 format=3 uid="uid://d03a1olx2ffqe"]

[ext_resource type="Script" path="res://scenes/scripts/player.gd" id="1_34y3g"]
[ext_resource type="Script" path="res://scenes/scripts/player_color.gd" id="1_ey7ef"]
[ext_resource type="Shader" path="res://shaders/VHS.gdshader" id="2_25ms1"]
[ext_resource type="Script" path="res://scenes/scripts/jump_color.gd" id="3_iexix"]
[ext_resource type="Texture2D" uid="uid://difi524jggj23" path="res://light.png" id="4_5ocsj"]
[ext_resource type="Script" path="res://scenes/scripts/player_hover_timer.gd" id="4_j0ulh"]
[ext_resource type="Script" path="res://scenes/scripts/trail_spawner.gd" id="7_ytt8a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r28wl"]
size = Vector2(38, 39)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6prsd"]
shader = ExtResource("2_25ms1")
shader_parameter/tape_wave_amount = 0.003
shader_parameter/tape_crease_amount = 2.5
shader_parameter/color_displacement = 1.0
shader_parameter/lines_velocity = 0.1

[node name="Player" type="Area2D"]
position = Vector2(576, 492)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_34y3g")

[node name="TrailSpawner" type="Marker2D" parent="."]
position = Vector2(-20, -20)
script = ExtResource("7_ytt8a")

[node name="TrailTimer" type="Timer" parent="TrailSpawner"]
wait_time = 0.142
one_shot = true

[node name="PlayerCollision" type="CollisionShape2D" parent="." groups=["player"]]
shape = SubResource("RectangleShape2D_r28wl")

[node name="PlayerColor" type="ColorRect" parent="." groups=["player"]]
show_behind_parent = true
material = SubResource("ShaderMaterial_6prsd")
use_parent_material = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(20, 20)
color = Color(0.672305, 1.76881e-06, 6.257e-07, 1)
script = ExtResource("1_ey7ef")

[node name="JumpColor" type="ColorRect" parent="PlayerColor" groups=["player"]]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(20, 20)
color = Color(1, 0.8582, 0.834183, 1)
script = ExtResource("3_iexix")

[node name="HoverTimer" type="Timer" parent="."]
wait_time = 0.988
one_shot = true
script = ExtResource("4_j0ulh")

[node name="HoverTimerStall" type="Timer" parent="HoverTimer"]
wait_time = 1.117
one_shot = true

[node name="HoverAllowed" type="Timer" parent="HoverTimer"]
wait_time = 0.3
one_shot = true

[node name="KeyPress" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 2.24
shadow_enabled = true
shadow_color = Color(0, 0, 0, 1)
texture = ExtResource("4_5ocsj")
texture_scale = 1.84

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="hover" from="." to="HoverTimer" method="_on_player_hover"]
[connection signal="hover_stop" from="." to="HoverTimer" method="_on_player_hover_stop"]
[connection signal="timeout" from="TrailSpawner/TrailTimer" to="TrailSpawner" method="_on_trail_timer_timeout"]
[connection signal="show_hover_stall_timer" from="HoverTimer" to="." method="_on_hover_timer_show_hover_stall_timer"]
[connection signal="timeout" from="HoverTimer/HoverTimerStall" to="HoverTimer" method="_on_hover_timer_stall_timeout"]
[connection signal="timeout" from="HoverTimer/HoverAllowed" to="." method="_on_hover_allowed_timeout"]
